# prova1_claude

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  PRODUCT.md  README.md  aire.csv  hospitales.csv  start.ps1
.claude/: settings.local.json
apps/api/: CLAUDE.md  Dockerfile  pyproject.toml
apps/api/app/: config.py  explain.py  health.py  main.py  modes.py
apps/api/tests/: test_smoke.py
apps/web/: CLAUDE.md  index.html  package.json
backend/: CLAUDE.md  PROMPT.md  future.md  skills.md  tasks.md
backend/app/: aq_client.py  cache.py  config.py  enrichment.py  explain.py  health.py  main.py  meteo_client.py  schemas.py  store.py
backend/scripts/: prewarm_explain.py
backend/tests/: conftest.py  test_parquet_store.py  test_performance.py  test_smoke.py
data-ml/: CLAUDE.md  PROMPT.md  pyproject.toml  skills.md  tasks.md
data-ml/data/: build_geojsons.py  csv_import.py  ingest.py  ingest_73points.py  ingest_pois.py  paths.py  tramo_barrio.py
data-ml/ml/: features_accidentes.py  features_trafico.py  score.py  train_accidentes.py  train_trafico.py
data/processed/: barrios.geojson  mapping_barrios.csv  tramos.geojson  ufi_latest.parquet
data/raw/: meteo.csv  transit_relacio_trams.csv
demo/: guion.md  snapshot.py
devops/: CLAUDE.md  PROMPT.md  requirements.txt  skills.md  tasks.md
devops/demo/: prewarm.py  (+2 more)
frontend/: CLAUDE.md  Dockerfile  FUTURE.md  PROMPT.md  index.html  nginx.conf  package-lock.json  package.json  skills.md  tailwind.config.js  tasks.md  tsconfig.json
infra/: docker-compose.yml
notebooks/: 00_exploracion.ipynb
(+18 files in other folders)
